--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,142 @@
-.App {
-  text-align: center;
+
+body{
+    background-color: #1f1e1e;
+    color: white;
+    overflow: hidden;
+}
+h1{
+    text-align: center;
+
+}
+span{
+    color: rgb(0,230,122);
+}
+.todo-wrapper{
+    background: #353434;
+    padding: 2%;
+    width: fit-content;
+    margin: 0 auto;
+    margin-top: 3%;
+    max-height: 80vh;
+    overflow-y: auto;
+    box-shadow: 0px 5px 7px rgb(27, 27, 27);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todo-input{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 25px;
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgb(78,78,78);
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo-input-item{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.todo-input-item label{
+    font-weight: bold;
+    margin-bottom: 10px;
+
+}
+.todo-input-item input{
+    padding: 8px;
+    border: none;
+    width: 250px;
+
+}
+.todo-input-item input:focus{
+    outline: 2px solid rgb(0,230,122);
 }
 
-.App-link {
-  color: #61dafb;
+.primary-btn{
+    background-color: rgb(0,230,122);
+    color: white;
+    border: none;
+    border-radius: 0px;
+    margin-top: 25px;
+    padding: 10px;
+    width: 60px;
+    cursor: pointer;
+
+}
+.primary-btn:hover{
+    background-color: rgb(4,196,106);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.secondary-btn{
+    background-color: rgb(71,71,71);
+    color: white;
+    border: none;
+    border-radius: 0px;
+    margin-top: 25px;
+    padding: 10px;
+    width: fit-content;
+    cursor: pointer;
+
+}
+
+.active{
+    background-color: rgb(0,230,122);
+}
+
+.btn-area{
+    margin-bottom: 15px;
+}
+
+.todo-list{
+    display: flex;
+    flex-direction: column;
+}
+
+.todo-list-item{
+    background-color: #414040;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0px 3px 5px rgb(43, 42,42);
+
+}
+
+.todo-list-item h3{
+    font-size: 25px;
+    color:  rgb(0,230,122);
+    font-weight: bold;
+    margin: 0;
+
+}
+.todo-list-item p{
+    font-size:  14px;
+    color: rgb(161,161,161);
+    margin-top: 8px;
+
+}
+
+.icon{
+    font-size: 28px;
+    cursor: pointer;
+
+}
+.icon:hover{
+    color: red;
+}
+
+.check-icon{
+    font-size:  28px;
+    margin-left: 10px;
+    color: rgb(0,230,122);
+    cursor: pointer;
+
+}
+.check-icon:hover{
+    color: rgb(4,196,106);
 }
