--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,8 @@ body{
 }
 h1{
     text-align: center;
+}
 
-}
-span{
-    color: rgb(0,230,122);
-}
 .todo-wrapper{
     background: #353434;
     padding: 2%;
@@ -139,4 +136,25 @@ span{
 }
 .check-icon:hover{
     color: rgb(4,196,106);
+}
+
+.edit-wrapper{
+    background-color: #414040;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+
+}
+.edit-wrapper input, .edit-wrapper textarea{
+    border: 1px solid lightgray;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 3px;
+}
+
+.edit-wrapper .primary-btn{
+    margin: 0 auto;
+    padding: 10px;
+    font-size: 16px;
+    width: fit-content;
 }
