--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ h1{
 .todo-input-item label{
     font-weight: bold;
     margin-bottom: 10px;
+    font-size: 20px;
 
 }
 .todo-input-item input{
@@ -55,11 +56,11 @@ h1{
     background-color: rgb(0,230,122);
     color: white;
     border: none;
-    border-radius: 0px;
     margin-top: 25px;
     padding: 10px;
     width: 60px;
     cursor: pointer;
+    font-size: 16px;
 
 }
 .primary-btn:hover{
@@ -70,11 +71,11 @@ h1{
     background-color: rgb(71,71,71);
     color: white;
     border: none;
-    border-radius: 0px;
     margin-top: 25px;
     padding: 10px;
     width: fit-content;
     cursor: pointer;
+    font-size: 16px;
 
 }
 
@@ -83,7 +84,7 @@ h1{
 }
 
 .btn-area{
-    margin-bottom: 15px;
+    margin-bottom: 26px;
 }
 
 .todo-list{
@@ -112,11 +113,17 @@ h1{
 
 }
 .todo-list-item p{
-    font-size:  14px;
+    font-size:  18px;
     color: rgb(161,161,161);
     margin-top: 8px;
 
 }
+.todo-list-item p.todo-description {
+    font-size: 14px;
+    color: white;
+    margin-top: 8px;
+  }
+  
 
 .icon{
     font-size: 28px;
